--- a/NooTranslateHelper/Form2.resx
+++ b/NooTranslateHelper/Form2.resx
@@ -124,7 +124,7 @@
     <value>172, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBoxGoogleTranslate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABGdBTUEAALGPC/xhBQAA/8dJREFUeF7s
         vQd4HMeV7yt5vQ67e5O9u/fe3X3P793ne9frdZZlZVFZYgSzJHtt7zrIvvb1OstWBCnmAIBJgQqWZNmy
